fix: page title too large

--- a/src/scss/_tile.scss
+++ b/src/scss/_tile.scss
@@ -29,7 +29,8 @@
   }
 
   .tile__title {
-    white-space: nowrap;
+    width: 100vw;
+    padding: 0px 15px;
     text-align: center;
     color: #fff;
     text-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
